fix: remove horizontal scroll in work.js

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -95,10 +95,6 @@
   text-align: center;
 }
 
-.projectCard {
-  margin-bottom: 2rem !important;
-}
-
 .vertical-center {
   margin-top: auto;
   margin-bottom: auto;
